Setup Application UI

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <body>
         <main>
             <div class="container">
-                <div class="phone-book">
+                <div class="my-contacts">
                     <div class="main-container">
-                        <h1>Phone Book</h1>
+                        <h1>My Contacts</h1>
                         <div class="form">
                             <form novalidate class="flexbox">
                                 <input type="text" class="contact-input">
@@ -35,7 +35,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="saved-contacts"></div>
+                <div class="saved-contacts">
+                    <p>Number of Contacts: <span>0</span></p>
+                </div>
             </div>
         </main>
     </body>
