--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@
                         <h1>My Contacts</h1>
                         <div class="form">
                             <form novalidate class="flexbox">
-                                <input type="text" class="contact-input">
+                                <input type="text" class="contact-input" placeholder="Contact Info (Name, City, Email)">
                                 <button class="add-contact">Add</button>
                             </form>
                         </div>
+                        <div class="message"></div>
                         <div class="contact-container grid">
-
-                        </div>
-                        <div class="info">
 
                         </div>
                     </div>
