Count contacts added to array

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <h1>My Contacts</h1>
                         <div class="form">
                             <form novalidate class="flexbox">
-                                <input type="text" class="contact-input" placeholder="Contact Info (Name, City, Email)">
+                                <input type="text" class="contact-input" placeholder="Contact Info (Full Name, City, Email)">
                                 <button class="add-contact">Add</button>
                             </form>
                         </div>
